# postgres_copilot

./: .env  .gitignore  Dockerfile  README.md  __init__.py  config_manager.py  database_navigation_module.py  docker-compose.dist.yml  docker-compose.yml  entrypoint.sh  error_handler_module.py  fastworkflow.env  fastworkflow.passwords.env  initialization_module.py  insights_module.py  litellm_error_handler.py  logger_module.py  memory_module.py  memory_server.py  model_change_module.py  postgres_copilot_architecture.md  postgres_copilot_chat.py  postgresql_server.py  prerequisites.py  pydantic_models.py  pyproject.toml  requirements.txt  revise_query_module.py  revision_insights_module.py  run.sh  setup.py  sql_generation_module.py  token_logging_module.py  token_utils.py  vector_store_module.py
___command_info/: command_directory.json  routing_definition.json
___command_info/global/: label_encoder.pkl  large_ambiguous_threshold.json  tiny_ambiguous_threshold.json
___convo_info/cache.db/: 000357.sst  000384.sst  IDENTITY  LOG  (+120 more)
_commands/: __init__.py  approve_sql.py  feedback_sql.py  generate_sql.py  initialize.py  initialize_db.py  schema_navigation.py  send_message.py
application/: __init__.py  db_session.py  error_handler_module.py  hyde_feedback_module.py  hyde_module.py  initialization.py  insights_module.py  join_path_finder.py  llm_client.py  memory_module.py  schema_navigation_module.py  schema_vectorization_module.py  send_message.py  sql_approval.py  sql_feedback.py  sql_generation.py  test_fixes.py  test_hyde_module.py  vector_store_module.py
(+167 files in other folders)
