[project]
name = "db-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.23",
    "google-generativeai>=0.8.5",
    "litellm>=1.71.0",
    "mcp>=1.9.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
