[project]
name = "db-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "boto3>=1.38.23",
    "google-generativeai>=0.8.5",
    "litellm>=1.71.0",
    "mcp>=1.9.0",
    "psycopg2-binary>=2.9.10", # Changed to psycopg2-binary
    "python-dotenv>=1.1.0",
    "lancedb>=0.6.2", # Added LanceDB
    "sentence-transformers>=2.7.0", # Added Sentence Transformers
    "pandas>=2.0.0", # Added pandas for LanceDB .to_df()
    # pyarrow is a common dependency for lancedb, often installed automatically
    "build>=1.2.2.post1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
postgres-copilot = "postgres_copilot.postgres_copilot_chat:entry_point_main"

[tool.setuptools]
packages = ["postgres_copilot"]
package-dir = {"postgres_copilot" = "."}
